Feature: let an expense use a category the same message creates
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>